feat(video-java): FR-B12 directory JSON sync, FlightHub, Dahua NVR
Port Python directory_json_sync_service rules to DirectoryJsonSyncService; implement FlightHub OpenAPI live/register with honest errors; add Dahua CGI NVR channel enumeration with vendor auto-detect.